# web3-threat-tracker

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: deploy-site.yml  ingest.yml  release.yml  validate.yml
data/entries/: c.yaml  f.yaml  g.yaml  h.yaml  i.yaml  j.yaml  k.yaml  l.yaml  n.yaml  o.yaml  q.yaml  t.yaml  u.yaml  v.yaml  x.yaml  y.yaml  z.yaml
data/exports/: stats.json
docs/: claude-code-prompt.md  contributing.md  data_dictionary.md  siem_integration.md  threat_landscape.md
labels/: README.md  entities.csv
schemas/: entry.schema.json
scripts/: build_db.py  build_labels.py  build_site.py  export_csv.py  models.py  normalize.py  stats.py  validate.py
scripts/ingest/: base.py  ingest_chainabuse.py  ingest_cryptoscamdb.py  ingest_forta.py  ingest_metamask.py  ingest_ofac.py  ingest_phishtank.py  ingest_scamsniffer.py  ingest_spmedia.py  ingest_urlhaus.py
site/: index.html  search.html
site/css/: app.css
site/js/: bitcoin-adapter.js  chain-adapter.js  common.js  dashboard.js  flow-chart.js  flow-graph.js  search.js  solana-adapter.js  ui.js
site/tools/: cctp-tracer.html  contract-audit.html  fund-flow.html  gas-tracer.html  mint-tracker.html
tests/: test_build_db.py  test_build_labels.py  test_build_site.py  test_export_csv.py  test_models.py  test_normalize.py  test_stats.py  test_validate.py
tests/ingest/: test_ingest_chainabuse.py  test_ingest_cryptoscamdb.py  test_ingest_forta.py  test_ingest_metamask.py  test_ingest_ofac.py  test_ingest_phishtank.py  test_ingest_scamsniffer.py  test_ingest_spmedia.py  (+1 more)
(+8 files in other folders)
